# haql-rover

./: .gitignore  README.md  compose.yml
.devcontainer/: Dockerfile  build-webots.bash  compose.yml  devcontainer.json  post-create.bash
.github/workflows/: deploy.yml
boden_bringup/: CMakeLists.txt  package.xml  setup.cfg  setup.py
boden_bringup/boden_bringup/: gps_wpf.py
boden_bringup/config/: apriltag.yml  localization.yml  nav2_no_map_params.yml  nav2_params.yml
boden_bringup/launch/: apriltag.launch.py  ekf_launch.py  gps_waypoint_follower.py  gps_wpf_launch.py  model.launch.py  navigation_launch.py
boden_description/: CMakeLists.txt  package.xml
boden_description/meshes/dae/: LongMotorAssem_V4 - Rough Shaft_V2-1.001.dae  LongMotorAssem_V4 - Rough Shaft_V2-1.003.dae  LongMotorAssem_V4 - Rough Shaft_V2-1.004.dae  LongMotorAssem_V4 - Rough Shaft_V2-1.006.dae  LongMotorAssem_V4-RoughShaft_V2-1.002.dae  LongMotorAssem_V4-RoughShaft_V2-1.dae  Zed2-i.dae  Zed2i.dae  chassisAssembly - roverBattery-1.dae  chassisAssembly-sensorPackageEnclosure-1.dae  sensor-package.dae  suspension-right-sub.dae  suspension-right.dae  wheel-right.dae
boden_description/sdf/: boden_description.sdf  boden_description_relpath.sdf
boden_description/urdf/: assem.urdf  assem_ros.urdf  boden_description.urdf  boden_description_relpath.urdf  boden_description_relpath.urdf.old  bodenbot.urdf.xacro  model.urdf.xacro
boden_interfaces/: CMakeLists.txt  package.xml
boden_interfaces/action/: Dock.action
boden_misc/: package.xml  setup.cfg  setup.py
boden_misc/boden_misc/: docking_server.py  mock_battery.py  motor_controller.py  motor_driver.py
boden_misc/launch/: motors_launch.py
boden_navigation/: package.xml  rover_tree.xml  setup.cfg  setup.py
boden_navigation/boden_navigation/: calibrate_straight.py  demo_auto.py  gps_wpf.py
boden_navigation/config/: nav2_params.yml  smac.json
boden_navigation/launch/: ekf_launch.py  gps_wpf_launch.py  navigation_launch.py
bodenbot/: CMakeLists.txt  bodenbot.xml  package.xml
bodenbot/bringup/config/: apriltag.yml  camera_config.yml  controllers.yml  gps_waypoints.yml  localization.yml  nav2_params.yml  nmea_config.yml  waypoints.yml
bodenbot/bringup/launch/: apriltag.launch.py  bodenbot.launch.py  navigation_launch.py
bodenbot/description/meshes/dae/: battery.dae  electronics.dae  main_plate.dae  suspension_left.dae  suspension_left_sub.dae  wheel_left.dae
bodenbot/description/ros2_control/: bodenbot.ros2_control.xacro
bodenbot/description/urdf/: bodenbot.materials.xacro  bodenbot.urdf.xacro  bodenbot_description.urdf.xacro
bodenbot/hardware/: bodenbot.cpp
bodenbot/hardware/include/bodenbot/: bodenbot.hpp  visibility_control.h
bodenbot_scripts/: package.xml  setup.cfg  setup.py
bodenbot_scripts/bodenbot_scripts/: calibrate_box.py  current_monitor.py  demo_auto.py  docking_server.py  gps_wpf.py  i2c_bus.py  ina233.py  loader.py  mock_battery.py  motor_controller.py  motor_controller_serial.py  motor_driver.py  waypoint_recorder.py
bodenbot_scripts/config/: motor_driver.yml  waypoints_mines.yml
doc/: book.toml
doc/src/: SUMMARY.md  configuration.md  installation.md  introduction.md  navigation.md  overview.md  simulation.md  team.md  usage.md
doc/src/hardware/: depth_camera.md  hardware.md  jetson.md  motors.md  rover.md  sensors.md
doc/src/software/: bodenbot.md  bodenbot_interface.md  bodenbot_scripts.md  bugs.md  packages.md  ros.md  traverse_layer.md  webots  webots.md
traverse_layer/: CMakeLists.txt  package.xml
traverse_layer/config/: hill_image.yml  traverse_filters.yml  valley_image.yml  visualization.yml
traverse_layer/include/traverse_layer/: PointcloudToGridmap.hpp  TraverseLayer.hpp  pointcloud_to_gridmap_component.hpp  traverse_layer_component.hpp
traverse_layer/launch/: hill_demo_launch.py  traverse_layer_launch.py  valley_demo_launch.py
traverse_layer/src/: PointcloudToGridmap.cpp  TraverseLayer.cpp  pointcloud_to_gridmap_component.cpp  pointcloud_to_gridmap_node.cpp  traverse_layer_component.cpp  traverse_layer_node.cpp
webots_dev/: README.md  package.xml  setup.cfg  setup.py
webots_dev/launch/: robot_launch.py
webots_dev/meshes/dae/: Zed2i.dae  electronics.dae  main-plate.dae  sensor-package.dae  suspension-left-sub.dae  suspension-left.dae  suspension-right-sub.dae  suspension-right.dae  wheel-left.dae  wheel-right.dae
webots_dev/protos/: Bodenbot-fixed-joints.proto  Bodenbot.proto  Kinect.proto  Mpu-9250.proto  Sojourner.proto  Tools.proto
webots_dev/protos/meshes/dae/: battery.dae
webots_dev/resource/: bodenbot_webots.urdf  rbot.urdf  ros2_control.yml
webots_dev/webots_dev/: add_noise_imu.py  gps_odom.py  gps_pose_publisher.py
webots_dev/worlds/: .flat_test.wbproj  .terrain.wbproj  flat_test.wbt  terrain.wbt
