<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>boden_navigation</name>
  <version>0.0.0</version>
  <description>Bringup Package for Boden</description>
  <maintainer email="deweykai5@gmail.com">deweykai</maintainer>
  <license>MIT</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>robot_localization</depend>
  <depend>nav2_bringup</depend>
  <depend>navigation2</depend>
  <depend>rclcpp_components</depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
