<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bodenbot</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="deweykai5@gmail.com">deweykai</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>apriltag_ros</depend>
  <depend>nav2_bringup</depend>
  <depend>rclcpp_components</depend>

  <build_depend>libi2c-dev</build_depend>

  <exec_depend>nmea_navsat_driver</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>diff_drive_controller</exec_depend>
  <exec_depend>depthimage_to_laserscan</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
