<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>traverse_layer</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="deweykai5@gmail.com">deweykai</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>grid_map_cmake_helpers</build_depend>
  
  <depend>cv_bridge</depend>
  <depend>geometry_msgs</depend>
  <depend>grid_map_core</depend>
  <depend>grid_map_cv</depend>
  <depend>grid_map_filters</depend>
  <depend>grid_map_loader</depend>
  <depend>grid_map_msgs</depend>
  <depend>grid_map_ros</depend>
  <depend>grid_map_rviz_plugin</depend>
  <depend>grid_map_visualization</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>rclcpp_components</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
